# Game-of-Life

./: Doxyfile.conf  README.md  main.c  main.test.c
.github/workflows/: cmake.yml
game/: CMakeLists.txt  life.c  life.h
gui/: CMakeLists.txt  gui.c
src/: ansi.c  ansi.h  life.c  life.h  utils.c  utils.h
step1/: .gitignore  Makefile
step1/src/: life.h  utils.c
step2/: .gitignore  CMakeLists.txt  main.c
step2/console/: ansi_console.c
step2/game/: life.c  life.h
step2/src/: main.c
step3/: CMakeLists.txt  main.c
step3/console/: CMakeLists.txt  board_drawer.h
step3/game/: life.c  life.h
step4/: CMakeLists.txt  config.h
step5/: CMakeLists.txt
step5/gui/: gui.h
